--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-ultralytics>=8.0.232
-supervision>=0.0.3
-pickle5>=0.0.11
+opencv_python==4.9.0.80
+opencv_python_headless==4.8.0.74
+supervision==0.20.0
+ultralytics==8.2.2
